--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Chapter 1</h1>
-    <p>This is the story of my life</p>
+    <p>This is the story of my life</p><p>
+        This is my second story
+    </p>
 </body>
 </html>
